--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Plotlist</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="img/logo.png">
